--- a/styles/buttonStyle.css
+++ b/styles/buttonStyle.css
@@ -1,15 +1,14 @@
 #generateButton {
-    background-color: #fbeee0;
+    background-color: #fae4fb;
     border: 2px solid #422800;
-    border-radius: 30px;
+    border-radius: 68px;
     box-shadow: #422800 4px 4px 0 0;
     color: #422800;
     cursor: pointer;
-    /* display: block; */
     font-weight: 600;
-    font-size: 18px;
-    padding: 0 18px;
-    line-height: 50px;
+    font-size: 48px;
+    padding: 0 48px;
+    line-height: 96px;
     text-align: center;
     text-decoration: none;
     user-select: none;
@@ -23,14 +22,6 @@
 #generateButton:hover {
     background-color: #fff;
 }
- 
-@media (min-width: 768px) {
-    #generateButton {
-        min-width: 120px;
-        padding: 0 25px;
-    }
-}
-
 
 #inspoButton {
   background: #fff;
@@ -43,14 +34,13 @@
   cursor: pointer;
   display: inline-block;
   font-family: Circular,Helvetica,sans-serif;
-  font-size: 1.125rem;
+  font-size: 3rem;
   font-weight: 700;
-  letter-spacing: -.01em;
-  line-height: 1.3;
-  padding: .875rem 1.125rem;
+  padding: 0 4rem;
+  line-height: 8rem;
   position: absolute;
-  bottom: 12px;
-  left: 12px;
+  bottom: 16px;
+  left: 16px;
   text-align: left;
   text-decoration: none;
   transform: translateZ(0) scale(1);
@@ -59,3 +49,22 @@
   -webkit-user-select: none;
   touch-action: manipulation;
 }
+
+/* Larger screens */
+@media screen and (min-width: 1100px) {
+    #generateButton {
+        border-radius: 30px;
+        font-size: 18px;
+        padding: 0 18px;
+        line-height: 50px;
+    }
+
+    #inspoButton {
+        font-size: 1.125rem;
+        letter-spacing: -.01em;
+        line-height: 1.3;
+        padding: .875rem 1.125rem;
+        bottom: 12px;
+        left: 12px; 
+    }
+}  
